msm8974-common: mokee-ify

--- a/gestures/AndroidManifest.xml
+++ b/gestures/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="org.lineageos.settings.device"
+      package="org.mokee.settings.device"
       android:sharedUserId="android.uid.system">
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
@@ -14,7 +14,7 @@
         android:label="GestureHandler"
         android:persistent="true">
 
-        <receiver android:name="org.lineageos.settings.device.BootCompletedReceiver">
+        <receiver android:name="org.mokee.settings.device.BootCompletedReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -22,7 +22,7 @@
         </receiver>
 
         <service
-            android:name="org.lineageos.settings.device.HtcGestureService"
+            android:name="org.mokee.settings.device.HtcGestureService"
             android:permission="HtcGestureService">
         </service>
 
@@ -31,7 +31,7 @@
             android:label="@string/touchscreen_gesture_settings_title"
             android:theme="@style/Theme.Main">
             <intent-filter>
-                <action android:name="org.lineageos.settings.device.GESTURE_SETTINGS" />
+                <action android:name="org.mokee.settings.device.GESTURE_SETTINGS" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
